Добавлен вывод пассажиров, транспортных средств и их классификаций

--- a/TaxiApp/Taxi.Client/Views/DriverWindow.axaml
+++ b/TaxiApp/Taxi.Client/Views/DriverWindow.axaml
@@ -5,9 +5,10 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Taxi.Client.Views.DriverWindow"
         xmlns:vm="using:Taxi.Client.ViewModels"
-        Title="Редактирование водителя"
+        Title="Добавление/Редактирование водителя"
         MaxWidth="500"
         SizeToContent="Height">
+    
     <Design.DataContext>
         <vm:DriverViewModel/>
     </Design.DataContext>
@@ -16,11 +17,20 @@
         <StyleInclude Source="/TaxiStyles.axaml"/>
     </Window.Styles>
     
-    <Grid Classes = "MainGrid" RowDefinitions="Auto,*" ColumnDefinitions="Auto, *">
-        <Label VerticalAlignment="Center">Наименование</Label>
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding FirstName}"/>
+    <Grid Classes = "MainGrid" RowDefinitions="Auto, Auto, Auto, Auto, Auto, *" ColumnDefinitions="Auto, *">
+        <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Фамилия</Label>
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding LastName}"/>
+        <Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Имя</Label>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding FirstName}"/>
+        <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Отчество</Label>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Patronymic}"/>
+        <Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Серия и номер паспорта</Label>
+        <MaskedTextBox Mask="0000 000000" Grid.Row="3" Grid.Column="1" Text="{Binding Passport}"/>
+        <Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Номер телефона</Label>
+        <MaskedTextBox Mask="+0-000-000-00-00" Grid.Row="4" Grid.Column="1" 
+                       Text="{Binding PhoneNumber}"/>
         
-        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
+        <StackPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" 
                     HorizontalAlignment="Right" 
                     Orientation="Horizontal">
             <Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
