--- a/Factory/Factory/Factory.Client/Views/SupplierWindow.axaml
+++ b/Factory/Factory/Factory.Client/Views/SupplierWindow.axaml
@@ -3,30 +3,28 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Factory.Client.ViewModels.EnterpriseWindow"
+        x:Class="Factory.Client.Views.SupplierWindow"
         xmlns:vm="using:Factory.Client.ViewModels"
-		Title="Редактирование предприятия"
+		Title="Supplier editing"
 		MaxWidth="500"
 		SizeToContent="Height">
+
 	<Design.DataContext>
-		<vm:EnterpriseViewModel/>
+		<vm:SupplierViewModel/>
 	</Design.DataContext>
-
-
+	
 	<Window.Styles>
 		<StyleInclude Source="/FactoryStyles.axaml"/>
 	</Window.Styles>
-	
+
 	<Grid Classes="MainGrid" RowDefinitions="Auto, *" ColumnDefinitions="Auto, *">
-		<Label VerticalAlignment="Center">Наименование</Label>
+		<Label VerticalAlignment="Center">Name</Label>
 		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}"/>
-		<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
-					HorizontalAlignment="Right" 
+		<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+					HorizontalAlignment="Right"
 					 Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Ok</Button>
 			<Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
 		</StackPanel>
-	
-	
 	</Grid>
 </Window>
