--- a/TaxiApp/Taxi.Client/Views/RideWindow.axaml
+++ b/TaxiApp/Taxi.Client/Views/RideWindow.axaml
@@ -3,11 +3,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:Taxi.Client.ViewModels"
+        
+        xmlns:valueConversion="clr-namespace:Microsoft.EntityFrameworkCore.Storage.ValueConversion;assembly=Microsoft.EntityFrameworkCore"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Taxi.Client.Views.RideWindow"
         Title="Добавление/Редактирование поездок"
         MaxWidth="500"
         SizeToContent="Height">
+        
     
         <Design.DataContext>
                 <viewModels:RideViewModel/>
@@ -23,11 +26,14 @@
                 <Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Точка прибытия</Label>
                 <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding DestinationPoint}"/>
                 
-                <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Дата и время начала поездки</Label>
-                <DateTimePickerPanel Grid.Row="2" Grid.Column="1" />
+                <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Дата начала поездки</Label>
+                <DatePicker Grid.Row="2" Grid.Column="1" SelectedDate="{Binding RideDate}"/>
                 
                 <Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Длительность поездки</Label>
-                <TimePicker Grid.Row="3" Grid.Column="1"/>
+                <TimePicker Grid.Row="3" Grid.Column="1" SelectedTime="{Binding RideTime}"/>
+                
+                <!-- <Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Длительность поездки</Label> -->
+                <!-- <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding RideTime}"/> -->
                 
                 <Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Стоимость</Label>
                 
