--- a/Factory/Factory/Factory.Client/Views/MainWindow.axaml
+++ b/Factory/Factory/Factory.Client/Views/MainWindow.axaml
@@ -33,7 +33,14 @@
 						  Items="{Binding Enterprises}"
 						  SelectedItem="{Binding SelectedEnterprise}">
 					<DataGrid.Columns>
+						<DataGridTextColumn Header="Registration number" Binding="{Binding RegistrationNumber}"/>
+						<DataGridTextColumn Header="Type of industry" Binding="{Binding TypeID}"/>
 						<DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+						<DataGridTextColumn Header="Address" Binding="{Binding Address}"/>
+						<DataGridTextColumn Header="Telephone number" Binding="{Binding TelephoneNumber}"/>
+						<DataGridTextColumn Header="Ownership form" Binding="{Binding OwnershipFormID}"/>
+						<DataGridTextColumn Header="Employees count" Binding="{Binding EmployeesCount}"/>
+						<DataGridTextColumn Header="Total area" Binding="{Binding TotalArea}"/>
 					</DataGrid.Columns>
 				</DataGrid>
 			</Grid>
@@ -57,9 +64,36 @@
 						  SelectedItem="{Binding SelectedSupplier}">
 					<DataGrid.Columns>
 						<DataGridTextColumn Header="Name" Binding="{Binding Name}"/>
+						<DataGridTextColumn Header="Address" Binding="{Binding Address}"/>
+						<DataGridTextColumn Header="Phone" Binding="{Binding Phone}"/>
 					</DataGrid.Columns>
 				</DataGrid>
 			</Grid>
 		</TabItem>
+		<TabItem Header="Supply" VerticalContentAlignment="Center">
+				<Grid Classes="MainGrid" RowDefinitions="Auto, *">
+					<StackPanel Grid.Row="0" Orientation="Horizontal">
+						<Button Classes="ToolButton" Command="{Binding OnAddSupplyCommand}">
+							<Image Source="/Assets/add.png"/>
+						</Button>
+						<Button Classes="ToolButton" Command="{Binding OnChangeSupplyCommand}">
+							<Image Source="/Assets/settings.png"/>
+						</Button>
+						<Button Classes="ToolButton" Command="{Binding OnDeleteSupplyCommand}">
+							<Image Source="/Assets/delete.png"/>
+						</Button>
+					</StackPanel>
+					<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+							  Items="{Binding Supplies}"
+							  SelectedItem="{Binding SelectedSupply}">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="EnterpriseID" Binding="{Binding EnterpriseID}"/>
+							<DataGridTextColumn Header="SupplierID" Binding="{Binding SupplierID}"/>
+							<DataGridTextColumn Header="Date" Binding="{Binding Date}"/>
+							<DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}"/>
+						</DataGrid.Columns>
+					</DataGrid>
+				</Grid>
+			</TabItem>
 	</TabControl>
 </Window>
