--- a/Factory/Factory/Factory.Client/Views/SupplierWindow.axaml
+++ b/Factory/Factory/Factory.Client/Views/SupplierWindow.axaml
@@ -17,10 +17,15 @@
 		<StyleInclude Source="/FactoryStyles.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto, *" ColumnDefinitions="Auto, *">
-		<Label VerticalAlignment="Center">Name</Label>
+	<Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, Auto *" ColumnDefinitions="Auto, *">
+		<Label  Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Name</Label>
 		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}"/>
-		<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+		<Label  Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Address</Label>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Address}"/>
+		<Label  Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Phone</Label>
+		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Phone}"/>
+		
+		<StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					 Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Ok</Button>
