--- a/TaxiApp/Taxi.Client/TaxiStyles.axaml
+++ b/TaxiApp/Taxi.Client/TaxiStyles.axaml
@@ -1,22 +1,37 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
-        <Border Padding="20">
-            <!-- Add Controls for Previewer Here -->
-        </Border>
+        <Border Padding="20" />
     </Design.PreviewWith>
 
     <Style Selector="Button.ToolButton">
-        <Setter Property="Width" Value="35"/>
-        <Setter Property="Height" Value="35"/>
-        <Setter Property="Margin" Value="0,4,0,4"/>
+        <Setter Property="Width" Value="35" />
+        <Setter Property="Height" Value="35" />
+        <Setter Property="Margin" Value="5,0,5,0" />
     </Style>
-    
+
     <Style Selector="Button">
-        <Setter Property="Width" Value="100"/>
+        <Setter Property="Width" Value="100" />
+        <Setter Property="CornerRadius" Value="10" />
     </Style>
-    
+
     <Style Selector="Grid.MainGrid">
-        <Setter Property="Margin" Value="8"/>
+        <Setter Property="Margin" Value="5" />
     </Style>
+
+    <Style Selector="TabItem">
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="FontWeight" Value="Bold" />
+        <Setter Property="Margin" Value="30, 5, 30, 5" />
+    </Style>
+
+    <Style Selector="StackPanel">
+        <Setter Property="Margin" Value="10" />
+    </Style>
+
+    <Style Selector="Label">
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
 </Styles>
