--- a/TaxiApp/Taxi.Client/Views/VehicleClassificationWindow.axaml
+++ b/TaxiApp/Taxi.Client/Views/VehicleClassificationWindow.axaml
@@ -8,29 +8,29 @@
         Title="Добавление/Редактирование классификации транспортного средства"
         MaxWidth="500"
         SizeToContent="Height">
-    
-        <Design.DataContext>
-                <viewModels:VehicleClassificationViewModel/>
-        </Design.DataContext>
-        
-        <Window.Styles>
-                <StyleInclude Source="/TaxiStyles.axaml"/>
-        </Window.Styles>
-    
-        <Grid Classes = "MainGrid" RowDefinitions="Auto, Auto, Auto, *" ColumnDefinitions="Auto, *">
-                <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Бренд</Label>
-                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Brand}"/>
-                <Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Модель</Label>
-                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Model}"/>
-                <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Класс транспортного средства</Label>
-                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Class}"/>
-        
-                <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" 
-                            HorizontalAlignment="Right" 
-                            Orientation="Horizontal">
-                        <Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
-                        <Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
-                </StackPanel>
-        </Grid>
+
+    <Design.DataContext>
+        <viewModels:VehicleClassificationViewModel />
+    </Design.DataContext>
+
+    <Window.Styles>
+        <StyleInclude Source="/TaxiStyles.axaml" />
+    </Window.Styles>
+
+    <Grid Classes="MainGrid" RowDefinitions="Auto, Auto, Auto, *" ColumnDefinitions="Auto, *">
+        <Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Бренд</Label>
+        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Brand}" />
+        <Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Модель</Label>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Model}" />
+        <Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Класс транспортного средства</Label>
+        <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Class}" />
+
+        <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
+                    HorizontalAlignment="Right"
+                    Orientation="Horizontal">
+            <Button IsDefault="True" Command="{Binding OnSubmitCommand}">OK</Button>
+            <Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
+        </StackPanel>
+    </Grid>
 
 </Window>
