--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgencyStyles.axaml
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/RecruitmentAgencyStyles.axaml
@@ -12,6 +12,10 @@
 		<Setter Property="Margin" Value="0,4,0,4" />
 	</Style>
 
+	<Style Selector="Button">
+		<Setter Property="Width" Value="100"></Setter>
+	</Style>
+	
 	<Style Selector="Grid.Main">
 		<Setter Property="Margin" Value="8" />
 	</Style>
