--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/MainWindow.axaml
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/MainWindow.axaml
@@ -16,16 +16,23 @@
 		<StyleInclude Source="/RecruitmentAgencyStyles.axaml" />
 	</Window.Styles>
 
-	<Grid Classes="Main" RowDefinitions="Auto, *">
+	<Grid Classes="MainGrid" RowDefinitions="Auto, *">
 		<StackPanel Grid.Row="0" Orientation ="Horizontal">
-			<Button Classes="ToolButton">
+			<Button Classes="ToolButton" Command="{Binding OnAddCompanyCommand}">
+				<Image Source="/Assets/Add.png"></Image>
 			</Button>
-			<Button Classes="ToolButton"/>
-			<Button Classes="ToolButton"/>
+			<Button Classes="ToolButton" Command="{Binding OnChangeCompanyCommand}">
+				<Image Source="/Assets/Edit.png"></Image>
+			</Button>
+			<Button Classes="ToolButton" Command="{Binding OnDeleteCompanyCommand}">
+				<Image Source="/Assets/Remove.png"></Image>
+			</Button>
 		</StackPanel>
-		<DataGrid Grid.Row="1" AutoGenerateColumns="True" Items="{Binding CompanyViewModel}">
+		<DataGrid Grid.Row="1" AutoGenerateColumns="False" 
+				  Items="{Binding Companies}"
+				  SelectedItem="{Binding SelectedCompany}">
 			<DataGrid.Columns>
-				<DataGridTextColumn Header="Наименование"/>
+				<DataGridTextColumn Header="Name" Binding ="{Binding CompanyName}"/>
 			</DataGrid.Columns>
 		</DataGrid> 
 	</Grid>
