--- a/Factory/Factory/Factory.Client/Views/SupplyWindow.axaml
+++ b/Factory/Factory/Factory.Client/Views/SupplyWindow.axaml
@@ -5,7 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Factory.Client.Views.SupplyWindow"
         xmlns:vm="using:Factory.Client.ViewModels"
-		Title="SupplyWindow"
+		Title="Supply editing"
 		MaxWidth="500"
 		SizeToContent="Height">
 
